WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
43945
WebKitTestRunner does not correctly resize WebView for W3C SVG tests
https://bugs.webkit.org/show_bug.cgi?id=43945
Summary
WebKitTestRunner does not correctly resize WebView for W3C SVG tests
Jon Honeycutt
Reported
2010-08-12 20:30:34 PDT
WebKitTestRunner does not correctly resize the WebView to 480x360 as expected for the W3C SVG 1.1 tests.
Attachments
Patch
(2.75 KB, patch)
2010-08-12 20:38 PDT
,
Jon Honeycutt
sam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jon Honeycutt
Comment 1
2010-08-12 20:37:14 PDT
<
rdar://problem/8305814
>
Jon Honeycutt
Comment 2
2010-08-12 20:38:04 PDT
Created
attachment 64294
[details]
Patch
Jon Honeycutt
Comment 3
2010-08-12 20:48:53 PDT
Landed in
r65294
. Thanks, Sam!
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug