WebKitTestRunner does not correctly resize WebView for W3C SVG tests https://bugs.webkit.org/show_bug.cgi?id=43945

Reviewed by Sam Weinig.

* WebKitTestRunner/TestInvocation.cpp:
(WTR::sizeWebViewForCurrentTest):
Allow for a Windows-style path.

* WebKitTestRunner/win/PlatformWebViewWin.cpp:
(WTR::PlatformWebView::resizeTo):
Call SetWindowPos to resize the view window.

Canonical link: https://commits.webkit.org/56094@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@65294 268f45cc-cd09-0410-ab3c-d52691b4dbfc